--- a/scss/base.scss
+++ b/scss/base.scss
@@ -1,18 +1,6 @@
-@font-face {
-    font-family: 'Play';
-    src: url('../fonts/play-regular-webfont.woff2') format('woff2'),
-         url('../fonts/play-regular-webfont.woff') format('woff');
-    font-weight: 400;
-    font-style: normal;
-}
-
-@font-face {
-    font-family: 'Play';
-    src: url('../fonts/play-bold-webfont.woff2') format('woff2'),
-         url('../fonts/play-bold-webfont.woff') format('woff');
-    font-weight: bold; /*700*/
-    font-style: normal;
-}
+$red: #e01f3d;
+$white: #ffffff;
+$black: #000000;
 
 html {
     box-sizing: border-box;
@@ -34,7 +22,7 @@ html, body {
 }
 
 .container {
-    max-width: 1100px;
+    max-width: 940px;
     margin: 0 auto;
 }
 
@@ -63,7 +51,7 @@ ul li {
 
 .wrapper {
     overflow: hidden;
-    min-width: 1100px;
+    min-width: 940px;
     min-height: 100%;
     display: flex;
     flex-direction: column;
@@ -71,15 +59,4 @@ ul li {
     &__content {
         flex: 1;
     }
-}
-
-.header {
-    display: flex;
-    justify-content: space-around;
-}
-
-.menu__list {
-    min-width: 638px;
-    display: flex;
-    justify-content: space-between;
 }
