--- a/scss/main-screen.scss
+++ b/scss/main-screen.scss
@@ -1,5 +1,5 @@
 .main-screen {
-    position: relative;
+    padding-bottom: 28px;
     &__title {
         max-width: 391px;;
         color: $black;
