--- a/css/main.css
+++ b/css/main.css
@@ -112,7 +112,7 @@ ul li {
 }
 
 .main-screen {
-  position: relative;
+  padding-bottom: 28px;
 }
 .main-screen__title {
   max-width: 391px;
@@ -165,4 +165,63 @@ ul li {
 }
 .main-screen .specs__icon {
   margin-right: 8px;
+}
+
+.reasons {
+  background: #ffffff;
+  padding-top: 98px;
+  padding-bottom: 96px;
+  position: relative;
+}
+.reasons--container {
+  max-width: 970px;
+}
+.reasons__main {
+  text-align: center;
+  margin-bottom: 57px;
+}
+.reasons__main-title {
+  color: #000000;
+  font-size: 48px;
+  font-weight: 700;
+  text-transform: uppercase;
+}
+.reasons__main-subtitle {
+  max-width: 573px;
+  color: #666666;
+  font-size: 18px;
+  margin: 0 auto;
+  line-height: 1.2;
+}
+.reasons__pic {
+  width: 125px;
+  height: 125px;
+  background-color: #f5f5f5;
+  border-radius: 50%;
+  margin: 0 auto;
+  margin-bottom: 29px;
+  position: relative;
+}
+.reasons__pic-item {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+.reasons__list {
+  display: flex;
+  justify-content: space-between;
+  text-align: center;
+}
+.reasons__title {
+  color: #000000;
+  font-size: 24px;
+  font-weight: 700;
+}
+.reasons__subtitle {
+  color: #666666;
+  font-size: 16px;
+}
+.reasons__circles {
+  margin-top: 53px;
 }
