--- a/scss/base.scss
+++ b/scss/base.scss
@@ -1,8 +1,3 @@
-$red: #e01f3d;
-$white: #ffffff;
-$black: #000000;
-$grey: #666666;
-$light-grey: #f5f5f5;
 
 html {
     box-sizing: border-box;
@@ -24,7 +19,7 @@ html, body {
 }
 
 .container {
-    max-width: 940px;
+    width: $containerWidth;
     margin: 0 auto;
 }
 
@@ -45,15 +40,15 @@ a {
 ul {
     padding: 0;
     margin: 0;
-}
-
-ul li {
-    list-style: none;
+    li {
+        list-style: none;
+    }
 }
 
 .wrapper {
     overflow: hidden;
-    min-width: 940px;
+    width: 100%;
+    min-width: $containerWidth + 20px;
     min-height: 100%;
     display: flex;
     flex-direction: column;
@@ -61,4 +56,9 @@ ul li {
     &__content {
         flex: 1;
     }
+}
+
+img {
+    display: block;
+    max-width: 100%;
 }
