--- a/scss/main.scss
+++ b/scss/main.scss
@@ -1,6 +1,23 @@
+
+//colors
+$red: #e01f3d;
+$darkRed: #ca1b36;
+$white: #ffffff;
+$black: #000000;
+$grey: #666666;
+$light-grey: #f5f5f5;
+
+//base integers
+$baseFontSize: 16px;
+$containerWidth: 940px;
+
+//setup
 @import "fonts";
 @import "base";
-@import "header";
+
+//blocks
 @import "button";
-@import "main-screen";
-@import "reasons";
+@import "blocks/hero";
+@import "blocks/header";
+@import "blocks/features";
+@import "blocks/feature";
