--- a/css/main.css
+++ b/css/main.css
@@ -24,6 +24,7 @@ html, body {
   -moz-osx-font-smoothing: grayscale;
   margin: 0;
   height: 100%;
+  color: #666666;
 }
 
 *, ::before, ::after {
@@ -33,6 +34,7 @@ html, body {
 .container {
   width: 940px;
   margin: 0 auto;
+  position: relative;
 }
 
 h1, h2, h3, h4, h5, h6 {
@@ -106,6 +108,7 @@ img {
   bottom: -18px;
   right: 28.2%;
   transform: rotateZ(45deg);
+  z-index: 1;
 }
 .hero__title-section {
   width: 46%;
@@ -137,7 +140,7 @@ img {
   flex-direction: column;
   justify-content: space-between;
   height: 100%;
-  background: url(../../img/content/headphones.png) right center/50% auto no-repeat;
+  background: url(../../img/content/headphones.png) right 4% center/50% auto no-repeat;
 }
 
 .header {
@@ -152,7 +155,6 @@ img {
 }
 .header .menu__list .menu__item {
   margin-right: 28px;
-  font-size: 16px;
 }
 .header .menu__list .menu__item:last-child {
   margin-right: 0;
@@ -186,6 +188,95 @@ img {
   margin-right: 7px;
 }
 .feature__text {
-  font-size: 16px;
   max-width: 89px;
+}
+
+.section {
+  height: 100vh;
+  min-height: 650px;
+  background-color: #ffffff;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
+.section__title {
+  font-size: 48px;
+  font-weight: bold;
+  text-align: center;
+  text-transform: uppercase;
+  color: #000000;
+}
+
+.headline {
+  text-align: center;
+  margin-bottom: 57px;
+}
+
+.headline__subtitle {
+  font-size: 18px;
+  padding: 0 14%;
+  line-height: 1.3;
+}
+
+.benefits {
+  display: flex;
+}
+.benefits-section {
+  position: relative;
+}
+.benefits-section:after {
+  content: url(../../img/content/red_triangle.png);
+  position: absolute;
+  bottom: -14px;
+  left: 7%;
+}
+.benefits__item {
+  flex: 1;
+  padding: 0 3%;
+  position: relative;
+}
+.benefits__item:before {
+  content: url(../../img/content/circles.png);
+  position: absolute;
+  top: 30px;
+  right: 0;
+  transform: translateX(50%);
+}
+.benefits__item:first-child {
+  padding-left: 0;
+}
+.benefits__item:last-child {
+  padding-right: 0;
+}
+.benefits__item:last-child:before {
+  display: none;
+}
+
+.benefit {
+  text-align: center;
+}
+.benefit__image {
+  margin-bottom: 20px;
+}
+.benefit__image-wrapper {
+  display: inline-block;
+  width: 126px;
+  height: 126px;
+  position: relative;
+  background: #f5f5f5;
+  border-radius: 50%;
+  overflow: hidden;
+}
+.benefit__icon {
+  width: 58px;
+  height: 62px;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+.benefit__title {
+  font-size: 24px;
+  color: #000000;
+  font-weight: bold;
 }
