--- a/scss/blocks/hero.scss
+++ b/scss/blocks/hero.scss
@@ -13,6 +13,7 @@
         bottom: -18px;
         right: 28.2%;
         transform: rotateZ(45deg);
+        z-index: 1;
     }
     height: 100vh;
     min-height: 650px;
@@ -53,5 +54,5 @@
     flex-direction: column;
     justify-content: space-between;
     height: 100%;
-    background: url(../../img/content/headphones.png) right center / 50% auto no-repeat;
+    background: url(../../img/content/headphones.png) right 4% center / 50% auto no-repeat;
 }
