--- a/scss/main.scss
+++ b/scss/main.scss
@@ -8,7 +8,7 @@ $grey: #666666;
 $light-grey: #f5f5f5;
 
 //base integers
-$baseFontSize: 16px;
+$baseFontSize: 18px;
 $containerWidth: 940px;
 
 //setup
@@ -21,3 +21,7 @@ $containerWidth: 940px;
 @import "blocks/header";
 @import "blocks/features";
 @import "blocks/feature";
+@import "blocks/section";
+@import "blocks/headline";
+@import "blocks/benefits";
+@import "blocks/benefit";
