order textarea section

--- a/scss/button.scss
+++ b/scss/button.scss
@@ -7,8 +7,23 @@
     font-weight: 700;
     text-transform: uppercase;
     line-height: 1;
+    display: inline-block;
+    border: none;
 
     &:hover {
         background-color: $darkRed;
+    }
+
+    &--theme--transparent {
+        background: transparent;
+        color: #999999;
+        font-size: 18px;
+        text-transform: none;
+        font-weight: 400;
+
+        &:hover {
+            color: #e01f3d;
+            background: transparent;
+        }
     }
 }
