--- a/scss/main.scss
+++ b/scss/main.scss
@@ -25,3 +25,9 @@ $containerWidth: 940px;
 @import "blocks/headline";
 @import "blocks/benefits";
 @import "blocks/benefit";
+@import "blocks/reviews";
+@import "blocks/interactive-avatar";
+@import "blocks/order-section";
+@import "blocks/form";
+@import "blocks/radio";
+@import "blocks/fixed-menu";
