--- a/css/main.css
+++ b/css/main.css
@@ -85,9 +85,22 @@ img {
   font-weight: 700;
   text-transform: uppercase;
   line-height: 1;
+  display: inline-block;
+  border: none;
 }
 .button:hover {
   background-color: #ca1b36;
+}
+.button--theme--transparent {
+  background: transparent;
+  color: #999999;
+  font-size: 18px;
+  text-transform: none;
+  font-weight: 400;
+}
+.button--theme--transparent:hover {
+  color: #e01f3d;
+  background: transparent;
 }
 
 .hero {
@@ -205,6 +218,10 @@ img {
   text-align: center;
   text-transform: uppercase;
   color: #000000;
+  margin-bottom: 25px;
+}
+.section--font--color--white {
+  color: #f8faf9;
 }
 
 .headline {
@@ -229,6 +246,7 @@ img {
   position: absolute;
   bottom: -14px;
   left: 7%;
+  z-index: 1;
 }
 .benefits__item {
   flex: 1;
@@ -279,4 +297,232 @@ img {
   font-size: 24px;
   color: #000000;
   font-weight: bold;
+}
+
+.reviews-section {
+  position: relative;
+}
+.reviews-section:before {
+  content: "";
+  display: block;
+  position: absolute;
+  width: 34px;
+  height: 34px;
+  bottom: -22px;
+  left: 8%;
+  border-radius: 50%;
+  background: #999999;
+}
+.reviews__display {
+  background: #f5f5f5;
+  padding: 51px 110px 34px 34px;
+  margin-bottom: 21px;
+  overflow: hidden;
+  position: relative;
+}
+.reviews__display-item {
+  display: flex;
+}
+.reviews__display:before {
+  content: "";
+  width: 90px;
+  height: 90px;
+  background: #fff;
+  border-radius: 50%;
+  position: absolute;
+  left: 50%;
+  transform: translateX(-50%);
+  top: -65px;
+  z-index: 1;
+}
+.reviews__avatar {
+  width: 254px;
+  height: 260px;
+}
+.reviews__avatar-img {
+  object-fit: cover;
+  width: 100%;
+  height: 100%;
+}
+.reviews__content {
+  flex: 1;
+  margin-left: 20px;
+}
+.reviews__title {
+  font-size: 30px;
+  font-weight: bold;
+  margin-bottom: 24px;
+  color: #000000;
+}
+.reviews__text {
+  margin-bottom: 45px;
+}
+.reviews__author {
+  font-size: 18px;
+  font-weight: bold;
+  color: #000000;
+}
+.reviews__switcher {
+  display: flex;
+  justify-content: center;
+}
+
+.interactive-avatar {
+  width: 80px;
+  height: 80px;
+  border: 6px solid transparent;
+  border-radius: 50%;
+  overflow: hidden;
+  position: relative;
+}
+.interactive-avatar--active {
+  border-color: #e01f3d;
+}
+.interactive-avatar__link {
+  position: absolute;
+  top: 0;
+  left: 0;
+  bottom: 0;
+  right: 0;
+  display: block;
+}
+.interactive-avatar__img {
+  display: block;
+  width: 100%;
+  height: 100px;
+  object-fit: cover;
+}
+
+.order-section {
+  background: url(../../img/content/order_background.jpg) center center/cover no-repeat;
+  position: relative;
+}
+.order-section:after {
+  content: url(../../img/content/polygon.png);
+  position: absolute;
+  top: -29px;
+  right: 10%;
+  z-index: 1;
+}
+
+.order__title {
+  color: #ffffff;
+  margin-bottom: 36px;
+}
+
+.form {
+  display: flex;
+}
+.form__title {
+  font-size: 18px;
+}
+.form__col {
+  flex: 1;
+  margin-right: 20px;
+}
+.form__col:last-child {
+  margin-right: 0;
+}
+.form__row {
+  display: flex;
+  margin-bottom: 18px;
+}
+.form__row--textarea {
+  margin-bottom: 21px;
+}
+.form__block {
+  flex: 1;
+  margin-right: 20px;
+}
+.form__block:last-child {
+  margin-right: 0;
+}
+.form__input {
+  width: 100%;
+  border: none;
+  padding: 18px 11px;
+  border: solid 3px transparent;
+}
+.form__input--textarea {
+  height: 180px;
+  resize: none;
+}
+.form__input:focus {
+  border-color: #e01f3d;
+  outline: none;
+}
+.form__controls {
+  display: flex;
+  flex-wrap: wrap;
+}
+.form__buttons {
+  margin-top: 31px;
+}
+
+.radio {
+  display: flex;
+  cursor: pointer;
+  -webkit-user-select: none;
+      -ms-user-select: none;
+          user-select: none;
+}
+.radio:first-child {
+  margin-right: 35px;
+  margin-bottom: 12px;
+}
+.radio--checkbox .radio__visible {
+  border-radius: 0;
+}
+.radio--checkbox .radio__visible:before {
+  border-radius: 0;
+}
+.radio__item {
+  display: none;
+}
+.radio__item:checked ~ .radio__visible:before {
+  display: block;
+}
+.radio__visible {
+  width: 26px;
+  height: 26px;
+  position: relative;
+  border-radius: 50%;
+  background: #fff;
+  margin-right: 11px;
+}
+.radio__visible:before {
+  content: "";
+  width: 14px;
+  height: 14px;
+  background: #e01f3d;
+  border-radius: 50%;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  display: none;
+}
+
+.fixed-menu {
+  position: fixed;
+  top: 20%;
+  right: 3%;
+}
+.fixed-menu__item {
+  margin-bottom: 5px;
+}
+.fixed-menu__item--active .fixed-menu__link {
+  border-color: #e42424;
+}
+.fixed-menu__link {
+  width: 16px;
+  height: 16px;
+  border-radius: 50%;
+  border: 1px solid transparent;
+  display: block;
+}
+.fixed-menu__link:before {
+  content: "";
+  display: block;
+  width: 6px;
 }
