--- a/scss/blocks/section.scss
+++ b/scss/blocks/section.scss
@@ -12,5 +12,10 @@
         text-align: center;
         text-transform: uppercase;
         color: $black;
+        margin-bottom: 25px;
+    }
+
+    &--font--color--white {
+        color: #f8faf9;
     }
 }
