--- a/scss/blocks/fixed-menu.scss
+++ b/scss/blocks/fixed-menu.scss
@@ -1,14 +1,20 @@
 .fixed-menu {
     position: fixed;
-    top: 20%;
-    right: 3%;
+    top: 39%;
+    right: 6%;
+    z-index: $z-index-menu;
 
     &__item {
-        margin-bottom: 5px;
+        margin-bottom: 12px;
 
         &--active {
+            
             .fixed-menu__link {
                 border-color: #e42424;
+
+                &:before {
+                    background: #e42424;
+                }
             }
         }
     }
@@ -19,11 +25,19 @@
         border-radius: 50%;
         border: 1px solid transparent;
         display: block;
+        position: relative;
 
         &:before {
             content: '';
             display: block;
             width: 6px;
+            height: 6px;
+            border-radius: 50%;
+            background: #999999;
+            position: absolute;
+            top: 50%;
+            left: 50%;
+            transform: translate(-50%, -50%);
         }
     }
 }
