--- a/scss/blocks/hero.scss
+++ b/scss/blocks/hero.scss
@@ -54,5 +54,5 @@
     flex-direction: column;
     justify-content: space-between;
     height: 100%;
-    background: url(../../img/content/headphones.png) right 4% center / 50% auto no-repeat;
+    background: url(../../../beats/img/content/headphones.png) right 4% center / 50% auto no-repeat;
 }
