--- a/css/main.css
+++ b/css/main.css
@@ -153,7 +153,7 @@ img {
   flex-direction: column;
   justify-content: space-between;
   height: 100%;
-  background: url(../../../beats/img/content/headphones.png) right 4% center/50% auto no-repeat;
+  background: url(../../../img/content/headphones.png) right 4% center/50% auto no-repeat;
 }
 
 .header {
@@ -394,7 +394,7 @@ img {
 }
 
 .order-section {
-  background: url(../../img/content/order_background.jpg) center center/cover no-repeat;
+  background: url(../../../img/content/order_background.jpg) center center/cover no-repeat;
   position: relative;
 }
 .order-section:after {
