--- a/scss/blocks/order-section.scss
+++ b/scss/blocks/order-section.scss
@@ -1,5 +1,5 @@
 .order-section {
-    background: url(../../../img/content/order_background.jpg) center center / cover no-repeat;
+    background: url(../../img/content/order_background.jpg) center center / cover no-repeat;
     position: relative;
     &:after {
         content: url(../../img/content/polygon.png);
