--- a/scss/blocks/order-section.scss
+++ b/scss/blocks/order-section.scss
@@ -1,8 +1,8 @@
 .order-section {
-    background: url(../../img/content/order_background.jpg) center center / cover no-repeat;
+    background: url(../../../beats/img/content/order_background.jpg) center center / cover no-repeat;
     position: relative;
     &:after {
-        content: url(../../img/content/polygon.png);
+        content: url(../../../beats/img/content/polygon.png);
         position: absolute;
         top: -29px;
         right: 10%;
