scss file fixes

--- a/css/main.css
+++ b/css/main.css
@@ -103,6 +103,36 @@ img {
   background: transparent;
 }
 
+.menu__list {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+
+.menu__item {
+  margin-right: 28px;
+}
+.menu__item:last-of-type {
+  margin-right: 0;
+}
+
+.phone {
+  font-size: 21px;
+  display: flex;
+  align-items: center;
+}
+
+.phone__icon-item {
+  width: 12px;
+  height: 12px;
+  margin-right: 4px;
+}
+
+.logo {
+  width: 42px;
+  height: 42px;
+}
+
 .hero {
   position: relative;
   background-color: #f5f5f5;
@@ -123,28 +153,10 @@ img {
   transform: rotateZ(45deg);
   z-index: 1;
 }
+
 .hero__title-section {
   width: 46%;
   position: relative;
-  z-index: 2;
-}
-.hero .logo {
-  width: 42px;
-  height: 42px;
-}
-.hero__main-title {
-  font-size: 48px;
-  line-height: 1.2;
-  font-weight: bold;
-  margin-bottom: 12px;
-  text-transform: uppercase;
-}
-.hero__subtitle {
-  font-size: 18px;
-  margin-bottom: 54px;
-  padding-right: 10%;
-}
-.hero__icons-section {
   z-index: 2;
 }
 
@@ -156,31 +168,28 @@ img {
   background: url(../../../beats/img/content/headphones.png) right 4% center/50% auto no-repeat;
 }
 
+.hero__main-title {
+  font-size: 48px;
+  line-height: 1.2;
+  font-weight: bold;
+  margin-bottom: 12px;
+  text-transform: uppercase;
+}
+
+.hero__subtitle {
+  font-size: 18px;
+  margin-bottom: 54px;
+  padding-right: 10%;
+}
+
+.hero__icons-section {
+  z-index: 2;
+}
+
 .header {
   display: flex;
   align-items: center;
   justify-content: space-between;
-}
-.header .menu__list {
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-}
-.header .menu__list .menu__item {
-  margin-right: 28px;
-}
-.header .menu__list .menu__item:last-child {
-  margin-right: 0;
-}
-.header .phone {
-  font-size: 21px;
-  display: flex;
-  align-items: center;
-}
-.header .phone__icon-item {
-  width: 12px;
-  height: 12px;
-  margin-right: 4px;
 }
 
 .features {
@@ -196,10 +205,12 @@ img {
 .feature {
   display: flex;
 }
+
 .feature__icon {
   width: 45px;
   margin-right: 7px;
 }
+
 .feature__text {
   max-width: 89px;
 }
@@ -212,6 +223,10 @@ img {
   flex-direction: column;
   justify-content: center;
 }
+.section--font--color--white {
+  color: #f8faf9;
+}
+
 .section__title {
   font-size: 48px;
   font-weight: bold;
@@ -219,9 +234,6 @@ img {
   text-transform: uppercase;
   color: #000000;
   margin-bottom: 25px;
-}
-.section--font--color--white {
-  color: #f8faf9;
 }
 
 .headline {
@@ -238,6 +250,7 @@ img {
 .benefits {
   display: flex;
 }
+
 .benefits-section {
   position: relative;
 }
@@ -248,6 +261,7 @@ img {
   left: 7%;
   z-index: 1;
 }
+
 .benefits__item {
   flex: 1;
   padding: 0 3%;
@@ -273,9 +287,11 @@ img {
 .benefit {
   text-align: center;
 }
+
 .benefit__image {
   margin-bottom: 20px;
 }
+
 .benefit__image-wrapper {
   display: inline-block;
   width: 126px;
@@ -285,6 +301,7 @@ img {
   border-radius: 50%;
   overflow: hidden;
 }
+
 .benefit__icon {
   width: 58px;
   height: 62px;
@@ -293,6 +310,7 @@ img {
   left: 50%;
   transform: translate(-50%, -50%);
 }
+
 .benefit__title {
   font-size: 24px;
   color: #000000;
@@ -313,15 +331,13 @@ img {
   border-radius: 50%;
   background: #999999;
 }
+
 .reviews__display {
   background: #f5f5f5;
   padding: 51px 110px 34px 34px;
   margin-bottom: 21px;
   overflow: hidden;
   position: relative;
-}
-.reviews__display-item {
-  display: flex;
 }
 .reviews__display:before {
   content: "";
@@ -335,33 +351,44 @@ img {
   top: -65px;
   z-index: 1;
 }
+
+.reviews__display-item {
+  display: flex;
+}
+
 .reviews__avatar {
   width: 254px;
   height: 260px;
 }
+
 .reviews__avatar-img {
   object-fit: cover;
   width: 100%;
   height: 100%;
 }
+
 .reviews__content {
   flex: 1;
   margin-left: 20px;
 }
+
 .reviews__title {
   font-size: 30px;
   font-weight: bold;
   margin-bottom: 24px;
   color: #000000;
 }
+
 .reviews__text {
   margin-bottom: 45px;
 }
+
 .reviews__author {
   font-size: 18px;
   font-weight: bold;
   color: #000000;
 }
+
 .reviews__switcher {
   display: flex;
   justify-content: center;
@@ -378,6 +405,7 @@ img {
 .interactive-avatar--active {
   border-color: #e01f3d;
 }
+
 .interactive-avatar__link {
   position: absolute;
   top: 0;
@@ -386,6 +414,7 @@ img {
   right: 0;
   display: block;
 }
+
 .interactive-avatar__img {
   display: block;
   width: 100%;
@@ -413,9 +442,11 @@ img {
 .form {
   display: flex;
 }
+
 .form__title {
   font-size: 18px;
 }
+
 .form__col {
   flex: 1;
   margin-right: 20px;
@@ -423,6 +454,7 @@ img {
 .form__col:last-child {
   margin-right: 0;
 }
+
 .form__row {
   display: flex;
   margin-bottom: 18px;
@@ -430,6 +462,7 @@ img {
 .form__row--textarea {
   margin-bottom: 21px;
 }
+
 .form__block {
   flex: 1;
   margin-right: 20px;
@@ -437,6 +470,7 @@ img {
 .form__block:last-child {
   margin-right: 0;
 }
+
 .form__input {
   width: 100%;
   border: none;
@@ -451,10 +485,12 @@ img {
   border-color: #e01f3d;
   outline: none;
 }
+
 .form__controls {
   display: flex;
   flex-wrap: wrap;
 }
+
 .form__buttons {
   margin-top: 31px;
 }
@@ -463,7 +499,6 @@ img {
   display: flex;
   cursor: pointer;
   -webkit-user-select: none;
-      -ms-user-select: none;
           user-select: none;
 }
 .radio:first-child {
@@ -476,12 +511,14 @@ img {
 .radio--checkbox .radio__visible:before {
   border-radius: 0;
 }
+
 .radio__item {
   display: none;
 }
 .radio__item:checked ~ .radio__visible:before {
   display: block;
 }
+
 .radio__visible {
   width: 26px;
   height: 26px;
@@ -509,6 +546,7 @@ img {
   right: 6%;
   z-index: 100;
 }
+
 .fixed-menu__item {
   margin-bottom: 12px;
 }
@@ -518,6 +556,7 @@ img {
 .fixed-menu__item--active .fixed-menu__link:before {
   background: #e42424;
 }
+
 .fixed-menu__link {
   width: 16px;
   height: 16px;
