--- a/scss/blocks/_hero.scss
+++ b/scss/blocks/_hero.scss
@@ -2,6 +2,9 @@
     position: relative;
     background-color: $light-grey;
     padding: 23px 0 36px 0;
+    height: 100vh;
+    min-height: 650px;
+    color: $black;
 
     &:before {
         content: "";
@@ -15,38 +18,12 @@
         transform: rotateZ(45deg);
         z-index: 1;
     }
-    height: 100vh;
-    min-height: 650px;
-    color: $black;
+}
 
-    &__title-section {
-        width: 46%;
-        position: relative;
-        z-index: 2;
-    }
-
-    .logo {
-        width: 42px;
-        height: 42px;
-    }
-    
-    &__main-title {
-        font-size: 48px;
-        line-height: 1.2;
-        font-weight: bold;
-        margin-bottom: 12px;
-        text-transform: uppercase;
-    }
-
-    &__subtitle {
-        font-size: 18px;
-        margin-bottom: 54px;
-        padding-right: 10%;
-    }
-
-    &__icons-section {
-        z-index: 2;
-    }
+.hero__title-section {
+    width: 46%;
+    position: relative;
+    z-index: 2;
 }
 
 .hero__container {
@@ -55,4 +32,22 @@
     justify-content: space-between;
     height: 100%;
     background: url(../../../beats/img/content/headphones.png) right 4% center / 50% auto no-repeat;
+}
+
+.hero__main-title {
+    font-size: 48px;
+    line-height: 1.2;
+    font-weight: bold;
+    margin-bottom: 12px;
+    text-transform: uppercase;
+}
+
+.hero__subtitle {
+    font-size: 18px;
+    margin-bottom: 54px;
+    padding-right: 10%;
+}
+
+.hero__icons-section {
+    z-index: 2;
 }
