--- a/css/main.css
+++ b/css/main.css
@@ -133,10 +133,31 @@ img {
   height: 42px;
 }
 
+.section {
+  height: 100vh;
+  min-height: 650px;
+  background-color: #ffffff;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
+.section--font--color--white {
+  color: #f8faf9;
+}
+
+.section__title {
+  font-size: 48px;
+  font-weight: bold;
+  text-align: center;
+  text-transform: uppercase;
+  color: #000000;
+  margin-bottom: 25px;
+}
+
 .hero {
   position: relative;
   background-color: #f5f5f5;
-  padding: 23px 0 36px 0;
+  padding: 2% 0 3% 0;
   height: 100vh;
   min-height: 650px;
   color: #000000;
@@ -160,30 +181,39 @@ img {
   z-index: 2;
 }
 
+.hero__title-content {
+  display: flex;
+  position: relative;
+}
+
 .hero__container {
   display: flex;
   flex-direction: column;
   justify-content: space-between;
   height: 100%;
-  background: url(../../../beats/img/content/headphones.png) right 4% center/50% auto no-repeat;
 }
 
 .hero__main-title {
-  font-size: 48px;
   line-height: 1.2;
-  font-weight: bold;
-  margin-bottom: 12px;
-  text-transform: uppercase;
+  margin-bottom: 20px;
+  text-align: left;
 }
 
 .hero__subtitle {
   font-size: 18px;
   margin-bottom: 54px;
-  padding-right: 10%;
+  max-width: 343px;
 }
 
 .hero__icons-section {
   z-index: 2;
+}
+
+.hero__title-img {
+  position: absolute;
+  bottom: 50%;
+  transform: translateY(58%);
+  right: 0;
 }
 
 .header {
@@ -213,27 +243,6 @@ img {
 
 .feature__text {
   max-width: 89px;
-}
-
-.section {
-  height: 100vh;
-  min-height: 650px;
-  background-color: #ffffff;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-}
-.section--font--color--white {
-  color: #f8faf9;
-}
-
-.section__title {
-  font-size: 48px;
-  font-weight: bold;
-  text-align: center;
-  text-transform: uppercase;
-  color: #000000;
-  margin-bottom: 25px;
 }
 
 .headline {
