--- a/scss/blocks/_hero.scss
+++ b/scss/blocks/_hero.scss
@@ -1,7 +1,7 @@
 .hero {
     position: relative;
     background-color: $light-grey;
-    padding: 23px 0 36px 0;
+    padding: 2% 0 3% 0;
     height: 100vh;
     min-height: 650px;
     color: $black;
@@ -26,28 +26,37 @@
     z-index: 2;
 }
 
+.hero__title-content {
+    display: flex;
+    position: relative;
+}
+
 .hero__container {
     display: flex;
     flex-direction: column;
     justify-content: space-between;
     height: 100%;
-    background: url(../../../beats/img/content/headphones.png) right 4% center / 50% auto no-repeat;
 }
 
 .hero__main-title {
-    font-size: 48px;
     line-height: 1.2;
-    font-weight: bold;
-    margin-bottom: 12px;
-    text-transform: uppercase;
+    margin-bottom: 20px;
+    text-align: left;
 }
 
 .hero__subtitle {
     font-size: 18px;
     margin-bottom: 54px;
-    padding-right: 10%;
+    max-width: 343px;
 }
 
 .hero__icons-section {
     z-index: 2;
+}
+
+.hero__title-img {
+    position: absolute;
+    bottom: 50%;
+    transform: translateY(58%);
+    right: 0;
 }
