--- a/scss/blocks/_headline.scss
+++ b/scss/blocks/_headline.scss
@@ -5,6 +5,7 @@
 
 .headline__subtitle {
     font-size: $baseFontSize;
-    padding: 0 14%;
+    margin: 0 auto;
+    max-width: 523px;
     line-height: 1.3;
 }
