--- a/scss/blocks/_interactive-avatar.scss
+++ b/scss/blocks/_interactive-avatar.scss
@@ -12,17 +12,14 @@
 }
 
 .interactive-avatar__link {
-    position: absolute;
-    top: 0;
-    left: 0;
-    bottom: 0;
-    right: 0;
     display: block;
+    width: 100%;
+    height: 100%;
 }
 
 .interactive-avatar__img {
     display: block;
     width: 100%;
-    height: 100px;
+    height: 100%;
     object-fit: cover;
 }
