--- a/scss/blocks/_radio.scss
+++ b/scss/blocks/_radio.scss
@@ -21,12 +21,20 @@
 }
 
 .radio__item {
-    display: none;
+    position: absolute;
+    clip: rect(0 0 0 0);
+    width: 1px;
+    height: 1px;
+    margin: -1px;
 
     &:checked ~ .radio__visible {
         &:before {
             display: block;
         }
+    }
+
+    &:focus ~ .radio__visible {
+        box-shadow: 0 0 3px white;
     }
 }
 
