--- a/css/main.css
+++ b/css/main.css
@@ -32,9 +32,10 @@ html, body {
 }
 
 .container {
-  width: 940px;
+  width: auto;
   margin: 0 auto;
   position: relative;
+  max-width: 940px;
 }
 
 h1, h2, h3, h4, h5, h6 {
@@ -110,7 +111,7 @@ img {
 }
 
 .menu__item {
-  margin-right: 28px;
+  margin-right: 1.75rem;
 }
 .menu__item:last-of-type {
   margin-right: 0;
@@ -140,6 +141,7 @@ img {
   display: flex;
   flex-direction: column;
   justify-content: center;
+  width: 100%;
 }
 .section--font--color--white {
   color: #f8faf9;
@@ -161,6 +163,7 @@ img {
   height: 100vh;
   min-height: 650px;
   color: #000000;
+  width: 100%;
 }
 .hero:before {
   content: "";
@@ -195,13 +198,13 @@ img {
 
 .hero__main-title {
   line-height: 1.2;
-  margin-bottom: 20px;
+  margin-bottom: 1.25rem;
   text-align: left;
 }
 
 .hero__subtitle {
   font-size: 18px;
-  margin-bottom: 54px;
+  margin-bottom: 3.375rem;
   max-width: 343px;
 }
 
@@ -252,12 +255,15 @@ img {
 
 .headline__subtitle {
   font-size: 18px;
-  padding: 0 14%;
+  margin: 0 auto;
+  max-width: 523px;
   line-height: 1.3;
 }
 
 .benefits {
   display: flex;
+  flex-wrap: wrap;
+  margin-left: -20px;
 }
 
 .benefits-section {
@@ -273,8 +279,9 @@ img {
 
 .benefits__item {
   flex: 1;
-  padding: 0 3%;
+  margin-left: 20px;
   position: relative;
+  flex-basis: calc(100% / 3 - 20px);
 }
 .benefits__item:before {
   content: url(../../../beats/img/content/circles.png);
@@ -291,6 +298,12 @@ img {
 }
 .benefits__item:last-child:before {
   display: none;
+}
+
+.benefits__desc {
+  max-width: 304px;
+  width: 100%;
+  margin: 0 auto;
 }
 
 .benefit {
@@ -416,18 +429,15 @@ img {
 }
 
 .interactive-avatar__link {
-  position: absolute;
-  top: 0;
-  left: 0;
-  bottom: 0;
-  right: 0;
   display: block;
+  width: 100%;
+  height: 100%;
 }
 
 .interactive-avatar__img {
   display: block;
   width: 100%;
-  height: 100px;
+  height: 100%;
   object-fit: cover;
 }
 
@@ -522,10 +532,17 @@ img {
 }
 
 .radio__item {
-  display: none;
+  position: absolute;
+  clip: rect(0 0 0 0);
+  width: 1px;
+  height: 1px;
+  margin: -1px;
 }
 .radio__item:checked ~ .radio__visible:before {
   display: block;
+}
+.radio__item:focus ~ .radio__visible {
+  box-shadow: 0 0 3px white;
 }
 
 .radio__visible {
@@ -558,6 +575,9 @@ img {
 
 .fixed-menu__item {
   margin-bottom: 12px;
+}
+.fixed-menu__item:hover .fixed-menu__link {
+  border-color: #e42424;
 }
 .fixed-menu__item--active .fixed-menu__link {
   border-color: #e42424;
