--- a/scss/blocks/_benefits.scss
+++ b/scss/blocks/_benefits.scss
@@ -1,5 +1,7 @@
 .benefits {
     display: flex;
+    flex-wrap: wrap;
+    margin-left: -20px;
 }
 
 .benefits-section {
@@ -15,8 +17,9 @@
 
 .benefits__item {
     flex: 1;
-    padding: 0 3%;
+    margin-left: 20px;
     position: relative;
+    flex-basis: calc(100% / 3 - 20px);
 
     &:before {
         content: url(../../../beats/img/content/circles.png);
@@ -37,4 +40,10 @@
             display: none;
         }
     }
+}
+
+.benefits__desc {
+    max-width: 304px;
+    width: 100%;
+    margin: 0 auto;
 }
