--- a/scss/blocks/_hero.scss
+++ b/scss/blocks/_hero.scss
@@ -5,6 +5,7 @@
     height: 100vh;
     min-height: 650px;
     color: $black;
+    width: 100%;
 
     &:before {
         content: "";
@@ -40,13 +41,13 @@
 
 .hero__main-title {
     line-height: 1.2;
-    margin-bottom: 20px;
+    margin-bottom: 1.25rem;
     text-align: left;
 }
 
 .hero__subtitle {
     font-size: 18px;
-    margin-bottom: 54px;
+    margin-bottom: 3.375rem;
     max-width: 343px;
 }
 
