--- a/scss/base.scss
+++ b/scss/base.scss
@@ -1,12 +1,20 @@
 
 html {
     box-sizing: border-box;
+    font-size: 16px;
+
+    @include tablets {
+        font-size: 15px;
+    }
+
+    @include phones {
+        font-size: 14px;
+    }
 }
 
 html, body {
     font-family: 'Play', Helvetica, sans-serif;
     background: #f5f5f5;
-    font-size: 16px;
     line-height: 1.42;
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
@@ -20,7 +28,7 @@ html, body {
 }
 
 .container {
-    width: auto;
+    width: 98%;
     margin: 0 auto;
     position: relative;
     max-width: $containerWidth;
@@ -51,7 +59,6 @@ ul {
 .wrapper {
     overflow: hidden;
     width: 100%;
-    min-width: $containerWidth + 20px;
     min-height: 100%;
     display: flex;
     flex-direction: column;
