--- a/scss/blocks/_form.scss
+++ b/scss/blocks/_form.scss
@@ -3,12 +3,12 @@
 }
 
 .form__title {
-    font-size: 18px;
+    font-size: rem(18px);
 }
 
 .form__col {
     flex: 1;
-    margin-right: 20px;
+    margin-right: rem(20px);
 
     &:last-child {
         margin-right: 0;
@@ -17,16 +17,16 @@
 
 .form__row {
     display: flex;
-    margin-bottom: 18px;
+    margin-bottom: rem(18px);
 
     &--textarea {
-        margin-bottom: 21px;
+        margin-bottom: rem(21px);
     }
 }
 
 .form__block {
     flex: 1;
-    margin-right: 20px;
+    margin-right: rem(20px);
 
     &:last-child {
         margin-right: 0;
@@ -36,7 +36,7 @@
 .form__input {
     width: 100%;
     border: none;
-    padding: 18px 11px;
+    padding: rem(18px) rem(11px);
     border: solid 3px transparent;
 
     &--textarea {
@@ -56,5 +56,5 @@
 }
 
 .form__buttons {
-    margin-top: 31px;
+    margin-top: rem(31px);
 }
