--- a/scss/blocks/_hero.scss
+++ b/scss/blocks/_hero.scss
@@ -41,13 +41,13 @@
 
 .hero__main-title {
     line-height: 1.2;
-    margin-bottom: 1.25rem;
+    margin-bottom: rem(20px);
     text-align: left;
 }
 
 .hero__subtitle {
-    font-size: 18px;
-    margin-bottom: 3.375rem;
+    font-size: rem(18px);
+    margin-bottom: rem(54px);
     max-width: 343px;
 }
 
