--- a/scss/blocks/_section.scss
+++ b/scss/blocks/_section.scss
@@ -13,10 +13,10 @@
 }
 
 .section__title {
-    font-size: 48px;
+    font-size: rem(48px);
     font-weight: bold;
     text-align: center;
     text-transform: uppercase;
     color: $black;
-    margin-bottom: 25px;
+    margin-bottom: rem(25px);
 }
