--- a/scss/main.scss
+++ b/scss/main.scss
@@ -11,8 +11,13 @@ $light-grey: #f5f5f5;
 $baseFontSize: 18px;
 $containerWidth: 940px;
 
+//breakpoints
+$tablets: 768px;
+$phones: 480px;
+
 //z-index
 $z-index-menu: 100;
+@import "media";
 
 //setup
 @import "fonts";
