--- a/scss/blocks/_hero.scss
+++ b/scss/blocks/_hero.scss
@@ -55,9 +55,10 @@
     z-index: 2;
 }
 
-.hero__title-img {
+.hero__img {
     position: absolute;
     bottom: 50%;
     transform: translateY(58%);
     right: 0;
+    width: 54%;
 }
