--- a/scss/blocks/_menu.scss
+++ b/scss/blocks/_menu.scss
@@ -2,6 +2,11 @@
     display: flex;
     align-items: center;
     justify-content: space-between;
+
+    @include large {
+        justify-content: space-around;
+        flex-wrap: wrap;
+    }
 }
 
 .menu__item {
