--- a/scss/base.scss
+++ b/scss/base.scss
@@ -2,12 +2,10 @@
 html {
     box-sizing: border-box;
     font-size: 16px;
-
-    @include tablets {
+    @include veryLarge {
         font-size: 15px;
     }
-
-    @include phones {
+    @include large {
         font-size: 14px;
     }
 }
@@ -28,7 +26,7 @@ html, body {
 }
 
 .container {
-    width: 98%;
+    width: 95%;
     margin: 0 auto;
     position: relative;
     max-width: $containerWidth;
