--- a/css/main.css
+++ b/css/main.css
@@ -25,6 +25,11 @@ html {
     font-size: 14px;
   }
 }
+@media screen and (max-width: 768px) {
+  html {
+    font-size: 16px;
+  }
+}
 
 html, body {
   font-family: "Play", Helvetica, sans-serif;
@@ -42,7 +47,7 @@ html, body {
 }
 
 .container {
-  width: 95%;
+  width: 94%;
   margin: 0 auto;
   position: relative;
   max-width: 940px;
@@ -124,6 +129,11 @@ img {
     flex-wrap: wrap;
   }
 }
+@media screen and (max-width: 768px) {
+  .menu__list {
+    display: none;
+  }
+}
 
 .menu__item {
   margin-right: 1.75rem;
@@ -136,6 +146,11 @@ img {
   font-size: 1.3125rem;
   display: flex;
   align-items: center;
+}
+@media screen and (max-width: 768px) {
+  .phone {
+    display: none;
+  }
 }
 
 .phone__icon-item {
@@ -198,10 +213,24 @@ img {
   position: relative;
   z-index: 2;
 }
+@media screen and (max-width: 768px) {
+  .hero__title-section {
+    flex: 1;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+}
 
 .hero__title-content {
   display: flex;
   position: relative;
+}
+@media screen and (max-width: 768px) {
+  .hero__title-content {
+    flex-wrap: wrap-reverse;
+    justify-content: center;
+  }
 }
 
 .hero__container {
@@ -210,11 +239,24 @@ img {
   justify-content: space-between;
   height: 100%;
 }
+@media screen and (max-width: 768px) {
+  .hero__container {
+    justify-content: flex-start;
+  }
+}
 
 .hero__main-title {
   line-height: 1.2;
   margin-bottom: 1.25rem;
   text-align: left;
+}
+@media screen and (max-width: 768px) {
+  .hero__main-title {
+    line-height: 1.2;
+    margin-bottom: 0.375rem;
+    max-width: 619px;
+    text-align: center;
+  }
 }
 
 .hero__subtitle {
@@ -222,9 +264,20 @@ img {
   margin-bottom: 3.375rem;
   max-width: 343px;
 }
+@media screen and (max-width: 768px) {
+  .hero__subtitle {
+    margin-bottom: 1.375rem;
+    text-align: center;
+  }
+}
 
 .hero__icons-section {
   z-index: 2;
+}
+@media screen and (max-width: 768px) {
+  .hero__icons-section {
+    display: none;
+  }
 }
 
 .hero__img {
@@ -234,11 +287,24 @@ img {
   right: 0;
   width: 54%;
 }
+@media screen and (max-width: 768px) {
+  .hero__img {
+    position: static;
+    width: 51%;
+    margin-bottom: 22px;
+    transform: none;
+  }
+}
 
 .header {
   display: flex;
   align-items: center;
   justify-content: space-between;
+}
+@media screen and (max-width: 768px) {
+  .header {
+    margin-bottom: 15%;
+  }
 }
 
 .features {
