--- a/scss/blocks/_header.scss
+++ b/scss/blocks/_header.scss
@@ -2,4 +2,8 @@
     display: flex;
     align-items: center;
     justify-content: space-between;
+
+    @include tablets {
+        margin-bottom: 15%;
+    }
 }
