--- a/scss/blocks/_menu.scss
+++ b/scss/blocks/_menu.scss
@@ -7,6 +7,10 @@
         justify-content: space-around;
         flex-wrap: wrap;
     }
+
+    @include tablets {
+        display: none;
+    }
 }
 
 .menu__item {
