--- a/scss/main.scss
+++ b/scss/main.scss
@@ -26,6 +26,7 @@ $z-index-menu: 100;
 @import "base";
 
 //blocks
+@import "blocks/mobile-menu";
 @import "blocks/hamburger";
 @import "button";
 @import "blocks/menu";
