benefits and order-section changes

--- a/css/main.css
+++ b/css/main.css
@@ -105,7 +105,12 @@ img {
   }
 }
 
-@keyframes menuOpacity {}
+.scroll {
+  background: #f5f5f5;
+  opacity: 0.95;
+  transition: background-color 0.4s;
+}
+
 .mobile-header {
   display: flex;
   justify-content: space-between;
@@ -378,17 +383,40 @@ img {
   margin-bottom: 3.5625rem;
 }
 
+@media screen and (max-width: 768px) {
+  .headline__title {
+    margin-bottom: 0;
+  }
+}
+
 .headline__subtitle {
   font-size: 18px;
   margin: 0 auto;
   max-width: 523px;
   line-height: 1.3;
 }
+@media screen and (max-width: 768px) {
+  .headline__subtitle {
+    max-width: 573px;
+  }
+}
 
 .benefits {
   display: flex;
   flex-wrap: wrap;
-  margin-left: -20px;
+  margin-left: -1.25rem;
+}
+@media screen and (max-width: 768px) {
+  .benefits {
+    margin-left: 0;
+    justify-content: space-around;
+  }
+}
+
+@media screen and (max-width: 768px) {
+  .benefits__container {
+    width: 100%;
+  }
 }
 
 .benefits-section {
@@ -406,7 +434,14 @@ img {
   flex: 1;
   margin-left: 1.25rem;
   position: relative;
-  flex-basis: calc(100% / 3 - 20px);
+  flex-basis: calc(100% / 3 - rem(20px));
+}
+@media screen and (max-width: 768px) {
+  .benefits__item {
+    margin-left: 0;
+    flex-basis: calc(100% / 3);
+    max-width: 256px;
+  }
 }
 .benefits__item:before {
   content: url(../../../beats/img/content/circles.png);
@@ -437,6 +472,15 @@ img {
 
 .benefit__image {
   margin-bottom: 1.25rem;
+}
+@media screen and (max-width: 768px) {
+  .benefit__image {
+    margin-bottom: 0.625rem;
+  }
+}
+
+.benefit__text {
+  line-height: 1.32;
 }
 
 .benefit__image-wrapper {
@@ -486,6 +530,12 @@ img {
   overflow: hidden;
   position: relative;
 }
+@media screen and (max-width: 768px) {
+  .reviews__display {
+    padding: 3.3125rem 1.25rem 1.5625rem 1.25rem;
+    margin-bottom: 1.6875rem;
+  }
+}
 .reviews__display:before {
   content: "";
   width: 90px;
@@ -502,10 +552,24 @@ img {
 .reviews__display-item {
   display: flex;
 }
+@media screen and (max-width: 768px) {
+  .reviews__display-item {
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+  }
+}
 
 .reviews__avatar {
   width: 254px;
   height: 260px;
+}
+@media screen and (max-width: 768px) {
+  .reviews__avatar {
+    width: 131px;
+    height: 133px;
+    margin-bottom: 1.625rem;
+  }
 }
 
 .reviews__avatar-img {
@@ -525,15 +589,35 @@ img {
   margin-bottom: 1.5rem;
   color: #000000;
 }
+@media screen and (max-width: 768px) {
+  .reviews__title {
+    font-size: 1.6875rem;
+    margin-bottom: 0.875rem;
+    text-align: center;
+  }
+}
 
 .reviews__text {
   margin-bottom: 2.8125rem;
+}
+@media screen and (max-width: 768px) {
+  .reviews__text {
+    margin-bottom: 0.625rem;
+    text-align: center;
+    font-size: 1.125rem;
+    line-height: 1.3;
+  }
 }
 
 .reviews__author {
   font-size: 1.125rem;
   font-weight: bold;
   color: #000000;
+}
+@media screen and (max-width: 768px) {
+  .reviews__author {
+    text-align: center;
+  }
 }
 
 .reviews__switcher {
@@ -567,11 +651,11 @@ img {
 }
 
 .order-section {
-  background: url(../../../beats/img/content/order_background.jpg) center center/cover no-repeat;
+  background: url(../../img/content/order_background.jpg) center center/cover no-repeat;
   position: relative;
 }
 .order-section:after {
-  content: url(../../../beats/img/content/polygon.png);
+  content: url(../../img/content/polygon.png);
   position: absolute;
   top: -1.8125rem;
   right: 10%;
@@ -585,6 +669,11 @@ img {
 
 .form {
   display: flex;
+}
+@media screen and (max-width: 768px) {
+  .form {
+    flex-direction: column;
+  }
 }
 
 .form__title {
