--- a/scss/blocks/_headline.scss
+++ b/scss/blocks/_headline.scss
@@ -3,9 +3,18 @@
     margin-bottom: rem(57px);
 }
 
+.headline__title {
+    @include tablets {
+        margin-bottom: 0;
+    }
+}
+
 .headline__subtitle {
     font-size: $baseFontSize;
     margin: 0 auto;
     max-width: 523px;
     line-height: 1.3;
+    @include tablets {
+        max-width: 573px;
+    }
 }
