--- a/css/main.css
+++ b/css/main.css
@@ -27,7 +27,7 @@ html {
 }
 @media screen and (max-width: 768px) {
   html {
-    font-size: 16px;
+    font-size: 15px;
   }
 }
 
@@ -440,7 +440,8 @@ img {
   .benefits__item {
     margin-left: 0;
     flex-basis: calc(100% / 3);
-    max-width: 256px;
+    max-width: 234px;
+    min-width: 233px;
   }
 }
 .benefits__item:before {
